<resources>
    <string name="app_name">EssayJoke</string>

    <string name="ss_share_hint">期待你的神评论</string>

    <string name="comment_dialog_send">发送</string>
    <string name="comment_dialog_share_label">分享到：</string>
    <string name="home_main">首页</string>
    <string name="home_discovery">发现</string>
    <string name="home_fresh">新鲜</string>
    <string name="home_me">消息</string>

    <string name="media_choose_ok">确定</string>
    <string name="media_choose_only_single">不支持多选</string>
    <string name="media_choose_preview">预览</string>
    <string name="media_choose_hint">支持选取最短4s最长10min</string>
</resources>
